# A3-Sistema-Tracking-Hombre-Caido

./: .gitignore  README.md  Reciver.ino  Sender.ino  SimpleLora.cpp  SimpleLora.h
config/: README_config.md  board_pins.h  fall_params.h  radio_params.h  system_config.h
docs/: A3_Arquitectura_Capas.md
firmware_node/: README_app.md  README_drivers.md  README_services.md
firmware_node/idf/: CMakeLists.txt
firmware_node/idf/main/: CMakeLists.txt
firmware_node/src/: main.c
firmware_node/src/app/: app.c  app.h  app_entry.c
firmware_node/src/drivers/: imu_accel.c  imu_accel.h  lora_radio.c  lora_radio.h
firmware_node/src/services/: alert_queue.c  alert_queue.h  fall_detector.c  fall_detector.h  pkt_codec.c  pkt_codec.h
firmware_rx/: README_app_rx.md
firmware_rx/idf/: CMakeLists.txt
firmware_rx/idf/main/: CMakeLists.txt
firmware_rx/src/: app_rx.c  app_rx.h  app_rx_entry.c  main.c
